fix: participants on chat creation
